<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <TextView
            android:id="@+id/tvTitleSignInActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="86dp"
            android:text="@string/title_sign_in_activity"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/etEmail"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:autofillHints="emailAddress"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleSignInActivity"
            tools:layout_editor_absoluteX="24dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="numberPassword"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            tools:layout_editor_absoluteX="24dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/btn_login"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tvForgotPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            tools:layout_editor_absoluteX="24dp" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/register"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>